tests/baselines/reference/esModuleInteropTslibHelpers.errors.txt
file2.ts(1,1): error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.


==== refs.d.ts (0 errors) ====
    declare module "path";
==== file.ts (0 errors) ====
    import path from "path";
    path.resolve("", "../");
    export class Foo { }
==== file2.ts (1 errors) ====
    import * as path from "path";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.
    path.resolve("", "../");
    export class Foo2 { }
==== file3.ts (0 errors) ====
    import {default as resolve} from "path";
    resolve("", "../");
    export class Foo3 { }
==== file4.ts (0 errors) ====
    import {Bar, default as resolve} from "path";
    resolve("", "../");
    export { Bar }